--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chart.js": "^4.4.1",
     "chartjs-plugin-datalabels": "^2.2.0",
     "leaflet": "^1.9.4",
+    "qrcode.react": "^4.2.0",
     "rc-slider": "^10.5.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
