--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mapbox/togeojson": "github:mapbox/togeojson",
     "@supabase/supabase-js": "^2.39.7",
     "chart.js": "^4.4.1",
     "chartjs-plugin-datalabels": "^2.2.0",
@@ -22,7 +23,8 @@
     "react-icons": "^5.0.1",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.22.3",
-    "recharts": "^3.5.0"
+    "recharts": "^3.5.0",
+    "xmldom": "^0.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
